; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_loop-invariant.c_move_invariants.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_loop-invariant.c_move_invariants.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loop = type { i32 }
%struct.invariant = type { i32 }

@invariant_p = common dso_local global i32 0, align 4
@invariants = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.loop*)* @move_invariants to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @move_invariants(%struct.loop* %0) #0 {
  %2 = alloca %struct.loop*, align 8
  %3 = alloca %struct.invariant*, align 8
  %4 = alloca i32, align 4
  store %struct.loop* %0, %struct.loop** %2, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %16, %1
  %6 = load i32, i32* @invariant_p, align 4
  %7 = load i32, i32* @invariants, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.invariant*, %struct.invariant** %3, align 8
  %10 = call i64 @VEC_iterate(i32 %6, i32 %7, i32 %8, %struct.invariant* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %5
  %13 = load %struct.loop*, %struct.loop** %2, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @move_invariant_reg(%struct.loop* %13, i32 %14)
  br label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = add i32 %17, 1
  store i32 %18, i32* %4, align 4
  br label %5

19:                                               ; preds = %5
  ret void
}

declare dso_local i64 @VEC_iterate(i32, i32, i32, %struct.invariant*) #1

declare dso_local i32 @move_invariant_reg(%struct.loop*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
